General/blockWildCardIngress/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: block-wildcard-ingress
tests:
- name: block-wildcard-ingress
  template: constraintTemplate.yaml
  constraint: constraint.yaml
  cases:
  - name: example-allowed
    object: example/example_allowed.yaml
    assertions:
    - violations: 0
  - name: blank-host
    object: example/disallowed/blank_host.yaml
    assertions:
    - violations: 1
  - name: host-omitted
    object: example/disallowed/host_omitted.yaml
    assertions:
    - violations: 1
  - name: wildcard-host
    object: example/disallowed/wildcard_host.yaml
    assertions:
    - violations: 1
